added logo image

--- a/assets/css/materialize/index.html
+++ b/assets/css/materialize/index.html
@@ -15,11 +15,16 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        
+        <li><a href="#">Connect</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Something</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">Connect  |</a></li>
+        <li><a href="#">About  |</a></li>
+        <li><a href="#"Something></a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -40,7 +45,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src=".\Public1\assets\css\materialize\images\logo_transparent_background.png" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src=".https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" alt="Banner Zach Malgieri"></div>
   </div>
 
 
