including small z logo

--- a/assets/css/materialize/index.html
+++ b/assets/css/materialize/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <a id="logo-container" href="" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_size_invert.jpg?raw=true"></a>
       <ul class="right hide-on-med-and-down">
         
         <li><a href="#">Connect</a></li>
@@ -45,7 +45,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src=".https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" alt="Banner Zach Malgieri"></div>
+    <div class="parallax"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width=850 height=150 alt="Banner Zach Malgieri"></div>
   </div>
 
 
