--- a/assets/css/materialize/index.html
+++ b/assets/css/materialize/index.html
@@ -11,9 +11,10 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
+  <!-- left size Z logo -->
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_size_invert.jpg?raw=true"></a>
+      <a id="logo-container" href="" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/Zlogo.JPG?raw=true" width=50 height=50></a>
       <ul class="right hide-on-med-and-down">
         
         <li><a href="#">Connect</a></li>
@@ -22,8 +23,8 @@
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Connect  |</a></li>
-        <li><a href="#">About  |</a></li>
+        <li><a href="#">Connect</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#"Something></a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -34,17 +35,20 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <!-- Deleted Header on next line used logo instead -->
+        <h1 class="header center teal-text text-lighten-2"></h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <!-- deleted h5 on following line -->
+          <h5 class="header col s12 light"></h5>
         </div>
-        <div class="row center">
+        <!-- <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-        </div>
+        </div> -->
         <br><br>
 
       </div>
     </div>
+    <!-- logo banner -->
     <div class="parallax"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width=850 height=150 alt="Banner Zach Malgieri"></div>
   </div>
 
@@ -56,28 +60,31 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/fb.JPG?raw=true">Connect</h2>
+            <!-- <h5 class="center">Speeds up development</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
+           -->
+           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
-
+            <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/gmail.JPG?raw=true" width=297 height=272></h2>
+            <h5 class="center">Email</h5>
+<!-- 
             <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          -->
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
+            <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/twitter.JPG?raw=true" width=297 height=272></h2>
+            <h5 class="center">Message</h5>
+<!-- 
             <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          -->
           </div>
         </div>
       </div>
