--- a/assets/css/materialize/mynieghborhood/index.html
+++ b/assets/css/materialize/mynieghborhood/index.html
@@ -45,44 +45,32 @@
 
       </div>
     </div>
-    <!-- logo banner
+    <!-- logo banner -->
     <div class="parallax"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width=850 height=150 alt="Banner Zach Malgieri"></div>
-  </div> -->
+  </div>
 
 
   <div class="container">
+
+      <div class="section">
+
+          <!--   About Section   -->
+          <div class="row">
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center teal-text"><img class="zach" src="https://media.licdn.com/dms/image/C5603AQGcR2776zO9SA/profile-displayphoto-shrink_800_800/0?e=1537401600&amp;v=beta&amp;t=O6SeOS9cxzpoILFQYdTdtQYAXhMBXhr5_6GcEKLHlQU" alt="Zach Malgieri Picture"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width="285" height="140"></h2>
+                    </div>
+                    </div>
+                    </div>
+
     <div class="section">
-
-       <!--   About Section Picture   -->
-       <div class="row">
-          <div class="col s12 m4">
-              <div class="icon-block">
-                  <h2 class="center teal-text"><img class="zach" src="https://media.licdn.com/dms/image/C5603AQGcR2776zO9SA/profile-displayphoto-shrink_800_800/0?e=1537401600&amp;v=beta&amp;t=O6SeOS9cxzpoILFQYdTdtQYAXhMBXhr5_6GcEKLHlQU" alt="Zach Malgieri Picture"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width="285" height="140"></h2>
-                  </div>
-                  </div>
-                  </div>
-
-                  
-       <!--   About Section BIO  -->
-       <div class="row">
-          <div class="col s12 m4">
-              <div class="icon-block">
-                  <p class="center teal-text">
-                    Thanks for stopping by! I am a Senior Mortgage Loan Officer with <a href="https://mortgagesolutions.net/" >Mortgage Solutions Financial.</a>
-                  </p>
-                  </div>
-                  </div>
-                  </div>
 
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/fb.JPG?raw=true">Connect</h2>
-            <!-- <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-           -->
+            
            </div>
         </div>
 
@@ -90,7 +78,9 @@
           <div class="icon-block">
             <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/gmail.JPG?raw=true" width=297 height=272></h2>
             <h5 class="center">Email</h5>
-
+<!-- 
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          -->
           </div>
         </div>
 
@@ -98,7 +88,9 @@
           <div class="icon-block">
             <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/twitter.JPG?raw=true" width=297 height=272></h2>
             <h5 class="center">Message</h5>
-
+<!-- 
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          -->
           </div>
         </div>
       </div>
@@ -178,10 +170,50 @@
       Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
+<!-- Google Map HTML -->
+<div id="map"></div>
+
+
+    <div class="contentDiv">
+        <form>
+            <div class="form-group">
+                <label for="formGroupExampleInput">Find more information on your desired location by City</label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="e.g. Sacramento">
+            </div>
+            <div class="form-group">
+                <label for="formGroupExampleInput2">Or Zip Code</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="e.g. 95815">
+            </div>
+        </form>
+    </div>
+<!-- JS for Google Maps -->
+<script type="text/javascript">
+  var map;
+
+function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+        center: { lat: 38.575764, lng: -121.478851 },
+        zoom: 8
+    })
+}
+</script>
+
+
+
+
+
+
+
+
   </footer>
 
 
   <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJAZvpjIihMIT97NpAcmLI15XV69mgWAA&callback=initMap" async defer></script>
+  <script src="assets/js/app.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
