changed logo to circle

--- a/assets/css/materialize/index.html
+++ b/assets/css/materialize/index.html
@@ -14,7 +14,7 @@
   <!-- left size Z logo -->
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/Zlogo.JPG?raw=true" width=50 height=50></a>
+      <a id="logo-container" href="" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logocirc.JPG?raw=true" width=60 height=60></a>
       <ul class="right hide-on-med-and-down">
         
         <li><a href="#">Connect</a></li>
@@ -88,7 +88,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/gmail.JPG?raw=true" width=297 height=272></h2>
+            <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/gmail.JPG?raw=true" width=297 height=272>with</h2>
             <h5 class="center">Email</h5>
 
           </div>
@@ -96,7 +96,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/twitter.JPG?raw=true" width=297 height=272></h2>
+            <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/twitter.JPG?raw=true" width=297 height=272>me!</h2>
             <h5 class="center">Message</h5>
 
           </div>
