--- a/Updated files/index.html
+++ b/Updated files/index.html
@@ -20,20 +20,20 @@
   <!-- left size Z logo -->
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logocirc.JPG?raw=true" width=60 height=60></a>
+      <a id="logo-container" href="index.html" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logocirc.JPG?raw=true" width=60 height=60></a>
       <ul class="right hide-on-med-and-down">
         
-        <li><a href="#">Connect</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">My Neighborhood</a></li>
+        <li><a href="checklist.html">Loan Checklist</a></li>
+        <li><a href="rate.html">Find My Rate</a></li>
+        <li><a href="neighborhood.html">Find My Neighborhood</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Connect</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">My Neighborhood</a></li>
+        <li><a href="checklist.html">Loan Checklist</a></li>
+        <li><a href="rate.html">Rate</a></li>
+        <li><a href="neighborhood.html">My Neighborhood</a></li>
       </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 <!-- Index banner -->
@@ -51,9 +51,7 @@
 
       </div>
     </div>
-    <!-- logo banner
-    <div class="parallax"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width=850 height=150 alt="Banner Zach Malgieri"></div>
-  </div> -->
+    
 
 
   <div class="container">
