uploaded new logos for links

--- a/Updated files/index.html
+++ b/Updated files/index.html
@@ -20,7 +20,7 @@
   <!-- left size Z logo -->
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logocirc.JPG?raw=true" width=60 height=60></a>
+      <a id="logo-container" href="index.html" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/Updated%20files/images/logocirc.JPG?raw=true" width=60 height=60></a>
       <ul class="right hide-on-med-and-down">
         
         <li><a href="checklist.html">Loan Checklist</a></li>
@@ -61,7 +61,7 @@
        <div class="row">
           <div class="col s12 m4">
               <div class="icon-block">
-                  <h2 class="center teal-text"><img class="zach" src="https://media.licdn.com/dms/image/C5603AQGcR2776zO9SA/profile-displayphoto-shrink_800_800/0?e=1537401600&amp;v=beta&amp;t=O6SeOS9cxzpoILFQYdTdtQYAXhMBXhr5_6GcEKLHlQU" alt="Zach Malgieri Picture"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width="285" height="140"></h2>
+                  <h2 class="center teal-text"><img class="zach" src="https://media.licdn.com/dms/image/C5603AQGcR2776zO9SA/profile-displayphoto-shrink_800_800/0?e=1537401600&amp;v=beta&amp;t=O6SeOS9cxzpoILFQYdTdtQYAXhMBXhr5_6GcEKLHlQU" alt="Zach Malgieri Picture"><img src="https://github.com/JRworkflows/Project1/blob/master/Updated%20files/images/logo_transparent_background.png?raw=true" width="285" height="140"></h2>
                   </div>
                   </div>
                   </div>
@@ -83,10 +83,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/images/fb.JPG?raw=true">Connect</h2>
-            <!-- <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-           -->
+            
            </div>
         </div>
 
@@ -129,7 +126,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <p class="left-align light">deleted lorem ipsum</p>
         </div>
       </div>
 
