working links working logos broken footer working on resolution

--- a/rate.html
+++ b/rate.html
@@ -11,11 +11,44 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    
+    <!-- CSS  -->
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+
     <title>The Real Deal Estate</title>
 
 </head>
 
 <body>
+        
+                <!-- left size Z logo -->
+                <nav class="white" role="navigation">
+                    <div class="nav-wrapper container">
+                        <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60></a>
+                        <ul class="right hide-on-med-and-down">
+            <!-- Nav Links -->
+            <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
+            <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+            <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
+                        </ul>
+            <!-- Mobile Nav Links -->
+                        <ul id="nav-mobile" class="sidenav">
+                                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
+                                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                                <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
+                        </ul>
+                        <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                    </div>
+                </nav>
+
     <div class="headerDiv">
         <h1>The Real Deal Estate: Zach</h1>
     </div>
@@ -34,7 +67,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home
+                        <a class="nav-link" href="https://jrworkflows.github.io/Project1/">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -141,4 +174,43 @@ $('#add-train-btn').on('click', function () {
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
     <script src="assets/js/app.js"></script>
+<!-- Footer -->
+        <div class="container">
+             <footer class="page-footer teal">
+<!-- Container for Company Bio and links -->
+                <div class="container">
+                    <div class="row">
+                        <div class="col l6 s12">
+                          <h5 class="white-text">Company Bio</h5>
+                          <p class="grey-text text-lighten-4">Zach is a Senior Financial Loan Officer with years of experience in his position. If you are looking for friendly personal service do not hesitate to reach Mr. Malgieri.</p>
+                        </div>
+                    <div class="col l3 s12">
+                        <h5 class="white-text">Settings</h5>
+                        <ul>
+                            <li><a class="white-text" href="#!">Link 1</a></li>
+                        </ul>
+                    </div>
+                    <div class="col l3 s12">
+                        <h5 class="white-text">Connect</h5>
+                        <ul>
+                            <li><a class="white-text" href="#!">Link 1</a></li>
+                        </ul>
+                    </div>
+                    </div>
+                </div>
+<!-- Copyright etc. -->
+         <div class="footer-copyright">
+             <div class="container">
+                 Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+             </div>
+        </div>
+             </footer>
+        </div>
+        <!--  Scripts-->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
+
 </body>
+
+</html>/
