--- a/mynieghborhood/index.html
+++ b/mynieghborhood/index.html
@@ -34,19 +34,19 @@
 <body>
     <!-- left size Z logo -->
     <nav class="white" role="navigation">
-        <div class="nav-wrapper container">
-            <a id="logo-container" href="index.html" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/Updated%20files/images/logocirc.JPG?raw=true" width=60 height=60></a>
-      <ul class="right hide-on-med-and-down">
-
-                <li><a href="checklist.html">Loan Checklist</a></li>
-                <li><a href="rate.html">Find My Rate</a></li>
-                <li><a href="neighborhood.html">Find My Neighborhood</a></li>
+            <div class="nav-wrapper container">
+                <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60></a>
+                <ul class="right hide-on-med-and-down">
+    <!-- Nav Links -->
+            <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
+            <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+            <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
             </ul>
 
             <ul id="nav-mobile" class="sidenav">
-                <li><a href="checklist.html">Loan Checklist</a></li>
-                <li><a href="rate.html">Find my Rate</a></li>
-                <li><a href="neighborhood.html">Find My Neighborhood</a></li>
+                    <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
+                    <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                    <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
             </ul>
             <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
