--- a/mynieghborhood/index.html
+++ b/mynieghborhood/index.html
@@ -92,13 +92,34 @@
 
 
     <!-- Footer -->
-    <footer>
-        <div class="footer-copyright">
-            <div class="container">
-                Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-            </div>
-        </div>
-    </footer>
+    <footer class="page-footer teal">
+            <!-- Container for Company Bio and links -->
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col l6 s12">
+                                      <h5 class="white-text">Company Bio</h5>
+                                      <p class="grey-text text-lighten-4">Zach is a Senior Financial Loan Officer with years of experience in his position. If you are looking for friendly personal service do not hesitate to reach Mr. Malgieri.</p>
+                                    </div>
+                                <div class="col l3 s12">
+                                    <h5 class="white-text">Settings</h5>
+                                    <ul>
+                                        <li><a class="white-text" href="#!">Link 1</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col l3 s12">
+                                    <h5 class="white-text">Connect</h5>
+                                    <ul>
+                                        <li><a class="white-text" href="#!">Link 1</a></li>
+                                    </ul>
+                                </div>
+                                </div>
+            <!-- Copyright etc. -->
+                     <div class="footer-copyright">
+                         <div class="container">
+                             Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+                         </div>
+                    </div>
+                         </footer>
 
 
 
