neighborhood page framework

--- a/checklist.html
+++ b/checklist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mortgage Checklist</title>
-     <!-- CSS  -->
+    <!-- CSS  -->
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
 
@@ -17,63 +17,64 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
+
 <body>
-        <!-- left size Z logo -->
-        <nav class="white" role="navigation">
-            <div class="nav-wrapper container">
-                <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60></a>
-                <ul class="right hide-on-med-and-down">
-    <!-- Nav Links -->
-    <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-    <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
-    <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
-                </ul>
-    <!-- Mobile Nav Links -->
-                <ul id="nav-mobile" class="sidenav">
-                        <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                        <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
-                        <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
-                </ul>
-                <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
+    <!-- left size Z logo -->
+    <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60></a>
+            <ul class="right hide-on-med-and-down">
+                <!-- Nav Links -->
+                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
+            </ul>
+            <!-- Mobile Nav Links -->
+            <ul id="nav-mobile" class="sidenav">
+                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
+            </ul>
+            <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
     <h1>Checklist</h1>
     <ul>Get Money</ul>
 
-<!-- Footer -->
-             <footer class="page-footer teal">
-<!-- Container for Company Bio and links -->
+    <!-- Footer -->
+    <footer class="page-footer teal">
+        <!-- Container for Company Bio and links -->
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Company Bio</h5>
+                    <p class="grey-text text-lighten-4">Zach is a Senior Financial Loan Officer with years of experience in his position. If you are looking for friendly personal service do not hesitate to reach Mr. Malgieri.</p>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Settings</h5>
+                    <ul>
+                        <li><a class="white-text" href="#!">Link 1</a></li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Connect</h5>
+                    <ul>
+                        <li><a class="white-text" href="#!">Link 1</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Copyright etc. -->
+            <div class="footer-copyright">
                 <div class="container">
-                    <div class="row">
-                        <div class="col l6 s12">
-                          <h5 class="white-text">Company Bio</h5>
-                          <p class="grey-text text-lighten-4">Zach is a Senior Financial Loan Officer with years of experience in his position. If you are looking for friendly personal service do not hesitate to reach Mr. Malgieri.</p>
-                        </div>
-                    <div class="col l3 s12">
-                        <h5 class="white-text">Settings</h5>
-                        <ul>
-                            <li><a class="white-text" href="#!">Link 1</a></li>
-                        </ul>
-                    </div>
-                    <div class="col l3 s12">
-                        <h5 class="white-text">Connect</h5>
-                        <ul>
-                            <li><a class="white-text" href="#!">Link 1</a></li>
-                        </ul>
-                    </div>
-                    </div>
-<!-- Copyright etc. -->
-         <div class="footer-copyright">
-             <div class="container">
-                 Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-             </div>
-        </div>
-             </footer>
-        </div>
-        <!--  Scripts-->
-        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="js/materialize.js"></script>
-        <script src="js/init.js"></script>
+                    Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+                </div>
+            </div>
+    </footer>
+    </div>
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
 </body>
 
 </html>
