--- a/index.html
+++ b/index.html
@@ -24,110 +24,115 @@
         <div class="nav-wrapper container">
             <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60></a>
             <ul class="right hide-on-med-and-down">
-<!-- Nav Links -->
+                <!-- Nav Links -->
                 <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
                 <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
             </ul>
-<!-- Mobile Nav Links -->
+            <!-- Mobile Nav Links -->
             <ul id="nav-mobile" class="sidenav">
-                    <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                    <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
-                    <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
             </ul>
             <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
- <!--  -->
+    <!--  -->
     <div class="container">
         <div class="section">
- <!--   About Section Picture   -->
-                <div class="row">
-                    <div class="col s12 m6">
-                        <div class="icon-block">
-                            <h2 class="center teal-text"><img class="zach" src="https://media.licdn.com/dms/image/C5603AQGcR2776zO9SA/profile-displayphoto-shrink_800_800/0?e=1537401600&amp;v=beta&amp;t=O6SeOS9cxzpoILFQYdTdtQYAXhMBXhr5_6GcEKLHlQU" alt="Zach Malgieri Picture">
-                                <img src="https://github.com/JRworkflows/Project1/blob/master/images/logo_transparent_background.png?raw=true" width="285" height="140"></h2>
-                        </div>
-                    </div>
- <!--   About Section BIO  -->
-                    <div class="col s12 m6">
-                        <div class="icon-block">
-                            <p class="center teal-text">
-                                Hello! Thank you for stopping by! I am a Senior Mortgage Loan Officer with <a href="https://mortgagesolutions.net/">Mortgage Solutions Financial.</a> Allow me to help you find the loan that best fits your needs. I specialize in home loans for little poeple, big poeple and everyone inbetween. Schedule your appointment today. Let's connect via Linkedin!
-                            </p>
-                        </div>
+            <!--   About Section Picture   -->
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="icon-block">
+                        <h2 class="center teal-text"><img class="zach" src="https://media.licdn.com/dms/image/C5603AQGcR2776zO9SA/profile-displayphoto-shrink_800_800/0?e=1537401600&amp;v=beta&amp;t=O6SeOS9cxzpoILFQYdTdtQYAXhMBXhr5_6GcEKLHlQU" alt="Zach Malgieri Picture">
+                            <img src="https://github.com/JRworkflows/Project1/blob/master/images/logo_transparent_background.png?raw=true" width="285" height="140"></h2>
                     </div>
                 </div>
+                <!--   About Section BIO  -->
+                <div class="col s12 m6">
+                    <div class="icon-block">
+                        <p class="center teal-text">
+                            Hello! Thank you for stopping by! I am a Senior Mortgage Loan Officer with <a href="https://mortgagesolutions.net/">Mortgage Solutions Financial.</a> Allow me to help you find the loan that best fits your needs. I specialize
+                            in home loans for little poeple, big poeple and everyone inbetween. Schedule your appointment today. Let's connect via Linkedin!
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
- <!-- End of about section -->
- <!--   Icon Section   -->
+    <!-- End of about section -->
+    <!--   Icon Section   -->
     <div class="container">
-      <div class="section">
-                <div class="row">
-                    <div class="col s12 m4">
-                        <div class="icon-block">
-                            <a id="linkedin" href="https://www.linkedin.com/in/zach-malgieri-a9961a61/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/linkedIn.JPG?raw=true"width=297 height=272><center></center></a> 
-                        </div>
+        <div class="section">
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <a id="linkedin" href="https://www.linkedin.com/in/zach-malgieri-a9961a61/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/linkedIn.JPG?raw=true" width=297 height=272>
+                            <center></center>
+                        </a>
                     </div>
                 </div>
-                <br>
-                <br>
-                    <div class="col s12 m4">
-                        <div class="icon-block">
-                            <a id="mortgagesolutions" href="https://mortgagesolutions.net/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/mortgagesolutionsfinancial.JPG?raw=true"width=297 height=272><center></center></a>
-                        </div>
-                    </div>
-       </div>
+            </div>
+            <br>
+            <br>
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <a id="mortgagesolutions" href="https://mortgagesolutions.net/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/mortgagesolutionsfinancial.JPG?raw=true" width=297 height=272>
+                        <center></center>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-<!-- PARALLAX WRAPPER -->
-        <div class="parallax-container valign-wrapper">
-            <div class="parallax"><img src="https://tse4.mm.bing.net/th?id=OIP.39f1tG3be8-rZC7FPzKqHQHaEo&pid=Api" alt="HOMELOAN ORAGE ARROW"></div>
-        </div>
-<!-- Footer -->
-             <footer class="page-footer teal">
-<!-- Container for Company Bio and links -->
+    <!-- PARALLAX WRAPPER -->
+    <div class="parallax-container valign-wrapper">
+        <div class="parallax"><img src="https://tse4.mm.bing.net/th?id=OIP.39f1tG3be8-rZC7FPzKqHQHaEo&pid=Api" alt="HOMELOAN ORAGE ARROW"></div>
+    </div>
+    <!-- Footer -->
+    <footer class="page-footer teal">
+        <!-- Container for Company Bio and links -->
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Company Bio</h5>
+                    <p class="grey-text text-lighten-4">Zach is a Senior Financial Loan Officer with years of experience in his position. If you are looking for friendly personal service do not hesitate to reach Mr. Malgieri.</p>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Settings</h5>
+                    <ul>
+                        <li><a class="white-text" href="#!">Link 1</a></li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Connect</h5>
+                    <ul>
+                        <li><a class="white-text" href="#!">Link 1</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Copyright etc. -->
+            <div class="footer-copyright">
                 <div class="container">
-                    <div class="row">
-                        <div class="col l6 s12">
-                          <h5 class="white-text">Company Bio</h5>
-                          <p class="grey-text text-lighten-4">Zach is a Senior Financial Loan Officer with years of experience in his position. If you are looking for friendly personal service do not hesitate to reach Mr. Malgieri.</p>
-                        </div>
-                    <div class="col l3 s12">
-                        <h5 class="white-text">Settings</h5>
-                        <ul>
-                            <li><a class="white-text" href="#!">Link 1</a></li>
-                        </ul>
-                    </div>
-                    <div class="col l3 s12">
-                        <h5 class="white-text">Connect</h5>
-                        <ul>
-                            <li><a class="white-text" href="#!">Link 1</a></li>
-                        </ul>
-                    </div>
-                    </div>
-<!-- Copyright etc. -->
-         <div class="footer-copyright">
-             <div class="container">
-                 Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-             </div>
-        </div>
-             </footer>
-        </div>
+                    Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+                </div>
+            </div>
+    </footer>
+    </div>
 
-        <!-- trying to make a img a hypherlink linkedin -->
-        <script>
-            $(document).ready(function() {
-                $('linkedin').click(function() {
-                    window.location.href = this.id + 'https://www.linkedin.com/in/zach-malgieri-a9961a61/';
-                });
+    <!-- trying to make a img a hypherlink linkedin -->
+    <script>
+        $(document).ready(function() {
+            $('linkedin').click(function() {
+                window.location.href = this.id + 'https://www.linkedin.com/in/zach-malgieri-a9961a61/';
             });
-        </script>
+        });
+    </script>
 
-        <!--  Scripts-->
-        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="js/materialize.js"></script>
-        <script src="js/init.js"></script>
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
 
 </body>
 
